WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/OnlineApplicationCardSetup__c.object-meta.xml
<CustomObject>
    <description>Forseva Online Application Project</description>
    <label>Online Application Card Setup</label>
    <nameField>
        <displayFormat>Card Setup-{0}</displayFormat>
        <label>Card Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Application Card Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>