WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/All_Merchants__c.field-meta.xml
<CustomField>
    <fullName>All_Merchants__c</fullName>
    <inlineHelpText>Limits daily purchases at all MasterCard accepting merchants to the amount specified</inlineHelpText>
    <label>All Merchants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>