WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Card_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Card_Restrictions__c</fullName>
    <label>Card Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Card_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All Merchants</fullName>
            </value>
            <value>
                <fullName>Fuel Only</fullName>
            </value>
            <value>
                <fullName>Fuel &amp; Maint.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>