WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Card</fullName>
            </value>
            <value>
                <fullName>Travel Card</fullName>
            </value>
            <value>
                <fullName>Fleet Driver Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>