WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This name will be embossed on the card</inlineHelpText>
    <label>Cardholder Name</label>
    <length>26</length>
    <type>Text</type>
</CustomField>