WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <label>Monthly Cash (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>