WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Monthly Credit Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>