WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <inlineHelpText>Limits the daily purchase activity at fuel merchants</inlineHelpText>
    <label>Fuel</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>