WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Maint__c.field-meta.xml
<CustomField>
    <fullName>Maint__c</fullName>
    <inlineHelpText>Limits the daily purchase activity at maintenance merchants</inlineHelpText>
    <label>Maint.</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>