WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationCardSetup__c/fields/Security_Code_Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Security_Code_Driver_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A six digit number used to validate the cardholder&apos;s identity; retain this number for future use</inlineHelpText>
    <label>Security Code/Driver ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>